--- a/20241130.md
+++ b/20241130.md
@@ -1,2 +1,6 @@
 ## 스프링 시큐리티 문제해결하기
 LOCALHOST에서 계속 리다이렉트 하고 쿠키 터졋다 이런 오류가 있다.
+이거 수정하려면 security config 의 서큐리티필터체인에서 어떻게 거르고 있는지가 중요함
+/login 은 토큰 없어도 접근가능해야하니까 .permitAll을 붙여줘야함 근데 react가 아니라 프론트가 앱으로 짯으면 formLogin이 아니라 그냥 적어줘야함 이걸 몰라서 계속 오류가 낫엇음
+
+서버에서 응답보낼 때 ? 로 해서 대충 string으로 에러는 그렇게 처리했었음 근데 프론트에선 json 으로 받아서 디코딩하니까 이렇게 보내면 에러에 대해서 오류가남 그냥 Json으로 어지간하면 묶어서 보내야함
