--- a/20241130.md
+++ b/20241130.md
@@ -4,3 +4,10 @@ LOCALHOST에서 계속 리다이렉트 하고 쿠키 터졋다 이런 오류가 
 /login 은 토큰 없어도 접근가능해야하니까 .permitAll을 붙여줘야함 근데 react가 아니라 프론트가 앱으로 짯으면 formLogin이 아니라 그냥 적어줘야함 이걸 몰라서 계속 오류가 낫엇음
 
 서버에서 응답보낼 때 ? 로 해서 대충 string으로 에러는 그렇게 처리했었음 근데 프론트에선 json 으로 받아서 디코딩하니까 이렇게 보내면 에러에 대해서 오류가남 그냥 Json으로 어지간하면 묶어서 보내야함
+
+NoClassDefFoundError: javax/xml/bind/DatatypeConverter는 javax.xml.bind.DatatypeConverter 클래스가 찾을 수 없어서 발생한 문제입니다. 이 클래스는 javax.xml.bind 패키지에 속하며, JDK 9 이상에서 더 이상 기본적으로 포함되지 않아서 발생하는 오류입니다.
+     JAXB API
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+     JAXB Runtime
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+    해결 방법 이렇게 의존성 추가하면 된다.
