--- a/20241204.md
+++ b/20241204.md
@@ -5,3 +5,37 @@ Crooss origin(*) 을 컨트롤러 단에서 다 하면,
 webConfig 파일에서 수정을 allowedCredentials (true) 를 박으면 안됌 
 둘이 설정 충돌남 둘중 하나는 지워야ㅐ함
 (*) 로 적으면 모든 경로에 대해서 받는거기때문에, 경로 설정 지정할 필요 있음
+
+플러터로 폰 연결해서 실행하기
+flutter devices 로 우선 연결된 디바이스 확인
+
+Could not build the precompiled application for the device.
+Error (Xcode): Provisioning profile "iOS Team Provisioning Profile: com.example.flutterApplicationEx" expired on Dec 1, 2024.
+/Users/sonhyeonbin/flutter_application_ex/ios/Runner.xcodeproj
+
+
+
+It appears that there was a problem signing your application prior to installation on the device.
+
+Verify that the Bundle Identifier in your project is your signing id in Xcode
+  open ios/Runner.xcworkspace
+
+Also try selecting 'Product > Build' to fix the problem.
+
+Error launching application on iPhone.
+sonhyeonbin@sonhyeonbin-ui-MacBookAir flutter_application_ex %  이 오류 핸들링하기
+
+ xcode에서 provisioning 바꿔줘야한다
+
+ flutter 해당 ios 경로에서 open ios/Runner.xcworkspace
+3. Signing 설정 업데이트
+Automatically manage signing 옵션을 활성화.
+Team 드롭다운에서 본인의 Apple Developer 계정을 선택.
+Xcode가 자동으로 새 프로비저닝 프로파일을 생성하도록 기다립니다.
+만약 Apple Developer 계정이 없다면 Apple Developer 계정을 생성하고, Xcode에 로그인하세요.
+4. 프로비저닝 프로파일 갱신
+만료된 프로파일로 인해 문제가 발생했으므로, 새 프로파일을 생성하세요:
+
+Keychain Access에서 만료된 인증서를 삭제.
+Xcode가 자동으로 새 프로파일을 생성하도록 위의 Automatically manage signing을 활성화한 뒤 Product > Clean Build Folder를 선택 (Shift + Command + K).
+Product > Build (Command + B)를 선택해 다시 빌드.
